2006-03-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock): Try
	to squelch performance issue with code that writes to large images by
	single pixels. Masses of thanks to George Staplin for helping to trace
	this down to the COMPLEX_ALPHA flag handling code. [Bug 1409140]

2006-03-13  Don Porter  <dgp@users.sourceforge.net>

	* tests/scrollbar.test:	Corrected several broken calls to [testmetrics]
	that were crashing the test suite.

	* tests/constraints.tcl:	Added notAqua constraint to canvPs-3.1
	* tests/canvPs.test:		to stop test suite crash on Mac OSX.
					[Bug 1088807]

	* generic/tkCmds.c:		Purged remaining references to
	* macosx/tkMacOSXPort.h:	errno, and errno.h.  Standardized
	* macosx/tkMacOSXWm.c:		the logic for using header files from
	* macosx/tkMacOSXWm.h:		the compat directory.  Thanks Joe
	* unix/tkUnixPort.h:		English for the patch. [Patch 1445404]

2006-03-11  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/bgerror.tcl (::tk::dialog::error::bgerror): Truncated error
	details were getting lost, leading to unreadable error messages.

2006-03-07  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* doc/canvas.n: Added note that stipples are not well-supported on
	non-X11 platforms. [Bug 220787] It's not a great solution, but it does
	indicate the state of affairs that has existed for years anyway; not
	much modern software uses stipples anyway.

2006-03-07  Don Porter  <dgp@users.sourceforge.net>

	* READNE:		Bump version number to 8.4.13 and update
	* changes:		changes to start prep for an 8.4.13 release.
	* generic/tk.h:
	* unix/configure{.in}:
	* unix/tk.spec:
	* win/configure{.in}:

2006-03-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/Makefile.in: convert _NATIVE paths to use / to avoid ".\"
	path-as-escape issue.

	* unix/tcl.m4, win/tcl.m4: []-quote ac_defun functions.

	* macosx/tkMacOSXDraw.c (TkPutImage): fix endian issue on OS X x86